[package]
name = "nanowrimo"
version = "0.2.3"
description = "Access to the NanoWrimo API, in all its forms"
keywords = ["nanowrimo", "api"]
repository = "https://github.com/craftspider/nanowrimo-rs"
documentation = "https://docs.rs/nanowrimo"
authors = ["Rune Tynan <runetynan@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
reqwest = { version = "^0.10", features = ["json"] }
chrono = { version = "^0.4", features = ["serde"] }
paste = "^1.0"

[dev-dependencies]
tokio = { version = "^0.2", features = ["full"] }
tokio-test = "^0.3"
